2005-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Introduced basic_cursor (the cursor class you really want in most cases)
  - Get accurate row counts when moving cursors
  - Removed workarounds for Visual C++ attempts to sabotage min()/max()
 include/pqxx/pipeline.hxx:
  - Removed workarounds for Visual C++ attempts to sabotage min()/max()
 include/pqxx/result.hxx:
  - Made basic_cursor a friend of result
 src/connection_base.cxx:
  - Worked around gcc/GNU libc warning for FD_SET
  - Removed my own comment that was, I recently found, unfair to Tom Lane
 test/test081.cxx:
  - Print number of lines in result set being tested
2005-07-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Makefile.am:
  - Filter out more uninteresting Doxygen output
 include/pqxx/binarystring.hxx, include/pqxx/connection_base.hxx,
 include/pqxx/connection.hxx, include/pqxx/dbtransaction.hxx,
 include/pqxx/except.hxx, include/pqxx/nontransaction.hxx,
 include/pqxx/robusttransaction.hxx, include/pqxx/transaction_base.hxx,
 include/pqxx/transaction.hxx, include/pqxx/transactor.hxx,
 include/pqxx/trigger.hxx, include/pqxx/util.hxx:
  - More grouping in Doxygen documentation
  - Used @code/@endcode tags in documentation
  - Documented PGSTD
 src/dbtransaction.cxx:
  - Use PGSTD instead of std
2005-07-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Rewrote libpq CONNECTION_OK workaround
2005-07-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Documentation: await_notification() also processes, thanks Szucs Gabor
2005-07-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Documented get_notifs() better, thanks Szucs Gabor
 src/connection_base.cxx:
  - Better workaround for problem with libpq's connection failure detection
2005-07-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Marked inhibit_reactivation() as tested
  - Restored full test coverage