@@ -350,54 +350,56 @@ AC_MSG_RESULT(yes)
 
 
 # Check presence and version of strerror_r()
-if test "$enable_thread_safety" = "yes" ; then
 AC_MSG_CHECKING([for strerror_r])
 AC_TRY_COMPILE(
 	[#include <cstring>
 	${usestd}],[strerror_r(0,0,0)],
-	[AC_DEFINE(PQXX_HAVE_STRERROR_R,1,[Define if strerror_r exists])],
-	[AC_MSG_ERROR([
+	[strerror_r=yes],
+	[strerror_r=no])
+AC_MSG_RESULT($strerror_r)
+if test "$enable_thread_safety" = "yes" -a "$strerror_r" != "yes" ; then
+	AC_MSG_WARN([
 No definition of strerror_r, the thread-safe version of strerror(), was found in
-your <cstring> header.  Consider building a non-threadsafe version of libpqxx
-using the configure script's --disable-thread-safety option.
-])])
-AC_MSG_RESULT(yes)
-
-# TODO: Shouldn't we make the function pointer extern "C"?
-AC_MSG_CHECKING([for SUSv3-style strerror_r returning int])
-AC_TRY_COMPILE(
-	[#include <cstring>
-	${usestd}],
-	[int(*f)(int,char*,size_t)=strerror_r;f(0,0,0)],
-	strerror_r_int=yes,
-	strerror_r_int=no)
-AC_MSG_RESULT($strerror_r_int)
-
-# TODO: Shouldn't we make the function pointer extern "C"?
-AC_MSG_CHECKING([for GNU-style strerror_r returning char *])
-AC_TRY_COMPILE(
-	[#include <cstring>
-	${usestd}],
-	[char*(*f)(int,char*,size_t)=strerror_r;f(0,0,0)],
-	strerror_r_charp=yes,
-	strerror_r_charp=no)
-AC_MSG_RESULT($strerror_r_charp)
-
-if ! test "$strerror_r_int" = "yes" && ! test "$strerror_r_charp" = "yes"; then
-AC_MSG_CHECKING([for AIX-style strerror_r (which also correctly returns int)])
-AC_TRY_COMPILE(
-	[#include <cstring>
-	${usestd}],
-	[int(*f)(int,char*,int)=strerror_r;f(0,0,0)],
-	strerror_r_int=yes,
-	[])
-AC_MSG_RESULT($strerror_r_int)
+your <cstring> header.  This may be because your implementation strerror() is threadsafe.
+])
 fi
 
-if test "$strerror_r_int" = "yes" ; then
-	AC_DEFINE(PQXX_STRERROR_R_INT,1,[Define for standard SUSv3 strerror_r])
-	if test "$strerror_r_charp" = "yes" ; then
-		AC_MSG_ERROR([
+if test "$strerror_r" = "yes" ; then
+	# TODO: Shouldn't we make the function pointer extern "C"?
+	AC_MSG_CHECKING([for SUSv3-style strerror_r returning int])
+	AC_TRY_COMPILE(
+		[#include <cstring>
+		${usestd}],
+		[int(*f)(int,char*,size_t)=strerror_r;f(0,0,0)],
+		strerror_r_int=yes,
+		strerror_r_int=no)
+	AC_MSG_RESULT($strerror_r_int)
+
+	# TODO: Shouldn't we make the function pointer extern "C"?
+	AC_MSG_CHECKING([for GNU-style strerror_r returning char *])
+	AC_TRY_COMPILE(
+		[#include <cstring>
+		${usestd}],
+		[char*(*f)(int,char*,size_t)=strerror_r;f(0,0,0)],
+		strerror_r_charp=yes,
+		strerror_r_charp=no)
+	AC_MSG_RESULT($strerror_r_charp)
+
+	if ! test "$strerror_r_int" = "yes" -o "$strerror_r_charp" = "yes" ; then
+		AC_MSG_CHECKING([for AIX-style strerror_r (which also correctly returns int)])
+		# TODO: Shouldn't we make the function pointer extern "C"?
+		AC_TRY_COMPILE(
+			[#include <cstring>
+			${usestd}],
+			[int(*f)(int,char*,int)=strerror_r;f(0,0,0)],
+			strerror_r_int=yes,
+			[])
+		AC_MSG_RESULT($strerror_r_int)
+	fi
+
+	if test "$strerror_r_int" = "yes" ; then
+		if test "$strerror_r_charp" = "yes" ; then
+			AC_MSG_WARN([
 Your compiler offers a strerror_r() function, but test programs redeclaring it
 as returning int and char *, respectively, both compile successfully.  The
 former is what the Single Unix Specification SUSv3 dictates, and the latter is
@@ -405,6 +407,10 @@ an older GNU libc function.  At least one of these tests should have failed,
 since there can't be two versions of this function taking the same arguments but
 returning different types.
 
+])
+
+			if test "$enable_thread_safety" = "yes" ; then
+				AC_MSG_ERROR([
 As a result of this ambiguity, the configure script was unable to determine
 which version of the function is correct.  You may need to use less permissive
 compiler options so that at least one of the alternatives will fail to compile.
@@ -413,18 +419,39 @@ See the config.log for more details; search for strerror_r to find the relevant
 snippets.  If all else fails, consider compiling a non-threadsafe version of
 libpqxx using the configure script's --disable-thread-safety option.
 ])
-	fi
-else
-	if ! test "$strerror_r_charp" = "yes" ; then
-			AC_MSG_ERROR([
+			else # !enable_thread_safety
+				AC_MSG_WARN([Using strerror() instead.
+])
+				strerror_r = no
+			fi # enable_thread_safety
+		fi # strerror_r_int && strerror_r_charp
+	else # ! strerror_r_int
+		if ! test "$strerror_r_charp" = "yes" ; then
+			AC_MSG_WARN([
 Your compiler's definition of strerror_r() fits none of the known signatures for
-that function.  Consider building a non-threadsafe version of libpqxx using the
+that function.
+
+])
+			if test "$enable_thread_safety" = "yes" ; then
+				AC_MSG_ERROR([
+Consider building a non-threadsafe version of libpqxx using the
 configure script's --disable-thread-safety option.
 ])
-	fi
-fi
+			else # !enable_thread_safety
+				AC_MSG_WARN([Using strerror() instead.])
+				strerror_r = no
+			fi # enable_thread_safety
+		fi # !strerror_r_charp
+	fi # strerror_r_int
 
-fi
+	if test "$strerror_r" = "yes" ; then
+		AC_DEFINE(PQXX_HAVE_STRERROR_R,1,[Define if strerror_r exists])
+		if test "$strerror_r_int" = "yes" ; then
+			AC_DEFINE(PQXX_STRERROR_R_INT,1,[Define for standard SUSv3 strerror_r])
+		fi # strerror_r_int
+	fi # strerror_r
+
+fi # strerror_r
 
 
 AC_MSG_CHECKING([for long double])
@@ -765,7 +792,7 @@ AC_MSG_CHECKING([usable grep -F or equivalent])
 SAMPLE=`cut -f 1 "${srcdir}/configitems" | head -n 1`
 # This is the standard, modern, POSIX-compliant way of doing things.
 # Unfortunately it breaks on Fedora Core 4.
-if grep -w -h -F "$SAMPLE" "${srcdir}/configitems" >/dev/null ; then
+if grep -F -w -h "$SAMPLE" "${srcdir}/configitems" >/dev/null ; then
 	fgrep_equiv=grep-F
 elif echo "$SAMPLE" | grep -w -h -f - "${srcdir}/configitems" >/dev/null ; then
 	fgrep_equiv=grep-f
@@ -786,13 +813,13 @@ for publication in $PUBLICATIONS ; do
 	for factor in $FACTORS ; do
 		CONFIGFILE="include/pqxx/config-$publication-$factor.h"
 		echo -n "Generating $CONFIGFILE: "
-		ITEMS="`grep "\<${publication}\>.\<${factor}\>" "$CFDB" | cut -f 1 | grep -v '^$'`"
+		ITEMS="`grep -w "${publication}" "$CFDB" | grep -w "${factor}" | cut -f 1 | grep -v '^$'`"
 		if test -z "$ITEMS" ; then
 			echo "no items--skipping"
 		else
 			case "${fgrep_equiv}" in
 				grep-F)
-					grep -w -h -F "$ITEMS" "$ORGHDR" >"$CONFIGFILE"
+					grep -F -w -h "$ITEMS" "$ORGHDR" >"$CONFIGFILE"
 					;;
 				grep-f)
 					echo "$ITEMS" | grep -w -h -f - "$ORGHDR" >"$CONFIGFILE"
